<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestWear</string>
    <string name="hello_world">Hello world!</string>
    <string name="send_notifi">send notificaion</string>
    <string name="ticwear_logo">ticwear</string>
    <string name="dot_str">●</string>
    <string name="ic_next_str">></string>
    <string name="android_pair">Android用户请在“tic“中连接手表</string>
    <string name="ios_pair">我是iphone用户</string>
    <string name="ios_welcome_1">欢迎使用</string>
    <string name="ios_welcome_2">TicWear iOS伴侣</string>
    <string name="ios_pair_bt">配对</string>

</resources>
