<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" 
    android:background="@color/light_bg" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/ios_welcome_1"/>
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#000000"
        android:gravity="center"
        android:text="@string/ios_welcome_2"/>
    <Button android:id="@+id/pair_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/ios_pair_bt"/>

</LinearLayout>